qa/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calculator-api
  namespace: qa
spec:
  type: ClusterIP
  selector:
    app: calculator-api
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
